[workspace]
members = [
    "contracts/minters/*",
    "contracts/whitelists/*",
    "contracts/factories/*",

    "packages/*"
]
resolver = "2"

[workspace.package]
version    = "0.0.1"
edition    = "2021"
homepage   = ""
repository = ""
license    = "Apache-2.0"

[workspace.dependencies]
cosmwasm-schema      = "1.5.0"
cosmwasm-std         = "1.2.1"
omniflix-std         = "0.0.1"
cw-controllers       = "1.1.0"
cw2                  = "1.1.0"
cw4                  = "1.1.0"
cw4-group            = "1.1.0"
cw721                = "0.18.0"
cw721-base           = "0.18.0"
cw-storage-plus      = "1.1.0"
cw-utils             = "1.0.1"
schemars             = "0.8.11"
thiserror            = "1.0.31"
semver               = "1"
cw-ownable           = "0.5.1"
cosmwasm-storage     = "1.5.0"
serde                = { version = "1.0.145", default-features = false, features = ["derive"] }
whitelist-types = { version = "0.0.1", path = "packages/whitelist-types" }
minter-types = { version = "0.0.1", path = "packages/minter-types" }