[package]
authors     = ["Adnan Deniz Corlu <adenizcorlu@gmail.com>"]
name = "integration-tests"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
doctest = false
[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]


[dependencies]
cosmwasm-storage = { workspace = true }
omniflix-std = { workspace=true }
cosmwasm-schema      = { workspace = true }
cosmwasm-std = { version = "1.5.0", features = ["iterator", "staking", "stargate"] }
cw-controllers       = { workspace = true }
cw2                  = { workspace = true }
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
schemars = "0.8.16"
cw-multi-test = "0.20.0"
minter-types={ workspace = true }
whitelist-types ={ workspace = true }
open-edition-minter-types = { workspace = true }
omniflix-minter-factory = {path = "../contracts/factories/minter-factory"}
omniflix-open-edition-minter-factory = {path = "../contracts/factories/open-edition-minter-factory"}
omniflix-minter = {path = "../contracts/minters/minter"}
omniflix-open-edition-minter = {path = "../contracts/minters/open-edition-minter"}
omniflix-round-whitelist-factory = {path = "../contracts/factories/round-whitelist-factory"}
omniflix-round-whitelist = {path = "../contracts/whitelists/round-whitelist"}
omniflix-testing = {path = "../packages/testing"}
anyhow = "1.0.79"
prost = "0.12.3"
bech32 = "0.9.1"
derivative = "2.2.0"
itertools = "0.12.0"
serde = "1.0.195"
thiserror = "1.0.56"
pauser = { workspace = true }
factory-types = { workspace = true }







