[package]
authors     = ["Adnan Deniz Corlu <adenizcorlu@gmail.com>"]
name = "round-whitelist"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-storage = { workspace = true }
omniflix-std = { workspace = true }
thiserror = { workspace = true }
cosmwasm-schema      = { workspace = true }
cosmwasm-std         = { workspace = true }
cw-controllers       = { workspace = true }
cw2                  = { workspace = true }
cw-storage-plus      = { workspace = true }
cw-utils             = { workspace = true }
serde = { workspace = true }
types = { workspace = true }
